# CocoaGDK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: content.cmake
shaders/: test.frag  test.vert
src/: core.h  main.c
src/core/: CMakeLists.txt
src/core/include/cocoa_gdk/core/: core_types.h  log.h
src/core/include/core/: core_types.h  export.h  log.h  results.h
src/core/src/: log.c
src/graphics/: CMakeLists.txt  types.h
src/graphics/include/cocoa_gdk/graphics/: export.h  graphics_types.h  image_loader.h
src/graphics/include/graphics/: export.h  graphics_types.h  image_loader.h
src/graphics/src/: image_loader.c
src/math/: CMakeLists.txt  angles.h  matrix4x4.h  vector3.h
src/math/include/cocoa_gdk/math/: angles.h  matrix4.h  quaternion.h  utilities.h  vector2.h  vector3.h
src/math/include/math/: angles.h  mat4.h  matrix4.h  matrix4x4.h  quaternion.h  utilities.h  vec2.h  vec3.h  vector2.h  vector3.h
src/opengl/: CMakeLists.txt  ebo.c  ebo.h  program.c  program.h  shader.c  shader.h  ubo.c  ubo.h  vao.c  vao.h  vbo.c  vbo.h
src/opengl/include/cocoa_gdk/opengl/: export.h  opengl_context.h  opengl_core.h  opengl_ebo.h  opengl_image.h  opengl_loader.h  opengl_pipeline.h  opengl_shader.h  opengl_types.h  opengl_ubo.h  opengl_vao.h  opengl_vbo.h
src/opengl/include/opengl/: export.h  exports.h  opengl_context.h  opengl_core.h  opengl_ebo.h  opengl_image.h  opengl_loader.h  opengl_pipeline.h  opengl_shader.h  opengl_types.h  opengl_ubo.h  opengl_utils.h  opengl_vao.h  opengl_vbo.h
src/opengl/include/opengl/gl/: opengl_context.h  opengl_ebo.h  opengl_loader.h  opengl_pipeline.h  opengl_shader.h  opengl_ubo.h  opengl_utils.h  opengl_vao.h  opengl_vbo.h
src/opengl/include/opengl/objects/: opengl_mesh.h
src/opengl/src/: opengl_context_macos.m  opengl_context_win32.c  opengl_core.c  opengl_ebo.c  opengl_image.c  opengl_loader.c  opengl_loader_macos.c  opengl_pipeline.c  opengl_shader.c  opengl_ubo.c  opengl_vao.c  opengl_vbo.c
src/opengl/src/gl/: opengl_core.c  opengl_ebo.c  opengl_pipeline.c  opengl_shader.c  opengl_ubo.c  opengl_vao.c  opengl_vbo.c
src/opengl/src/gl/platform/macos/: opengl_context_macos.m  opengl_loader_macos.c
src/opengl/src/gl/platform/win32/: opengl_context_win32.c  opengl_loader_win32.c
src/opengl/src/objects/: opengl_mesh.c
src/opengl/src/platform/macos/: opengl_context_macos.m  opengl_loader_macos.c
src/opengl/src/platform/win32/: opengl_context_win32.c  opengl_loader_win32.c
src/platform/: CMakeLists.txt  windowing.h
src/platform/include/cocoa_gdk/platform/: audio.h  audio_utils.h  export.h  input.h  input_gamepad.h  input_keyboard.h  input_mouse.h  platform.h  socket.h  utils.h  window.h
src/platform/include/cocoa_gdk/platform/cocoa/: cocoa_input.h
src/platform/include/cocoa_gdk/platform/win32/: win32_input.h
src/platform/include/platform/: audio.h  audio_utils.h  export.h  exports.h  input.h  input_gamepad.h  input_keyboard.h  input_mouse.h  net.h  platform.h  socket.h  utils.h  window.h  windowing.h
src/platform/include/platform/cocoa/: cocoa_input.h
src/platform/include/platform/win32/: win32_input.h
src/platform/internal/cocoa_gdk/platform/cocoa/: cocoa_gamepad.h  cocoa_keyboard.h  cocoa_mouse.h
src/platform/internal/cocoa_gdk/platform/win32/: win32_gamepad.h  win32_keyboard.h  win32_mouse.h
src/platform/internal/platform/cocoa/: cocoa_gamepad.h  cocoa_keyboard.h  cocoa_mouse.h
src/platform/internal/platform/win32/: win32_gamepad.h  win32_keyboard.h  win32_mouse.h
src/platform/macos/: windowing_macos.m
src/platform/src/cocoa/: cocoa_audio.m  cocoa_gamepad.m  cocoa_input.m  cocoa_keyboard.m  cocoa_mouse.m  cocoa_platform.m  cocoa_utils.c  cocoa_window.m
src/platform/src/macos/: input_macos.m  utils_macos.c  windowing_macos.m
src/platform/src/unix/: unix_socket.c
src/platform/src/win32/: utils_win32.c  win32_audio.c  win32_gamepad.c  win32_input.c  win32_keyboard.c  win32_mouse.c  win32_platform.c  win32_socket.c  win32_utils.c  win32_window.c  windowing_win32.c
src/tests/: CMakeLists.txt  main.c
src/tests/net/: CMakeLists.txt  main.c
src/tests/opengl/: CMakeLists.txt  main.c
src/tests/opengl/assets/shaders/: test.frag  test.vert
src/tests/vulkan/: CMakeLists.txt  main.c
src/tools/: CMakeLists.txt  dynamic_array.c  dynamic_array.h  resource_manager.c  resource_manager.h  types.h
src/tools/include/tools/: dynamic_array.h  resource_manager.h
src/tools/src/: dynamic_array.c  resource_manager.c
src/vulkan/: CMakeLists.txt  core.c  core.h  swapchain.c  swapchain.h  types.h  vulkan_core.c  vulkan_core.h
src/vulkan/include/cocoa_gdk/vulkan/: buffer.h  instance.h  swapchain.h
src/vulkan/include/cocoa_gdk/vulkan/internal/: buffer_vulkan.h  instance_vulkan.h  swapchain_vulkan.h
src/vulkan/include/vulkan/: buffer.h  export.h  instance.h  instance_vulkan.h  swapchain.h  swapchain_vulkan.h  vulkan_core.h  vulkan_swapchain.h
src/vulkan/include/vulkan/internal/: buffer_vulkan.h  instance_vulkan.h  swapchain_vulkan.h
src/vulkan/include/vulkan/tools/: vma.h
src/vulkan/src/: buffer.c  instance.c  swapchain.c  vulkan_core.c  vulkan_swapchain.c
src/vulkan/src/tools/: vma.c  vma.cpp
